--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,18 @@
 # Project Properties
 #
 CMAKE_MINIMUM_REQUIRED (VERSION 2.6.2)
-PROJECT (projectname)
-SET (APPLICATION_NAME "Project Name")
+PROJECT (tesla)
+SET (APPLICATION_NAME "Tesla")
 SET (APPLICATION_CODENAME "${PROJECT_NAME}")
-SET (APPLICATION_COPYRIGHT_YEARS "2009")
+SET (APPLICATION_COPYRIGHT_YEARS "2015")
 SET (APPLICATION_VERSION_MAJOR 1)
 SET (APPLICATION_VERSION_MINOR 0)
 SET (APPLICATION_VERSION_PATCH 0)
 SET (APPLICATION_VERSION_TYPE SNAPSHOT)
 SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
-SET (APPLICATION_VENDOR_ID "com.yourcompany")
+SET (APPLICATION_VENDOR_ID "github.com/mssurajkaiga/tesla")
 SET (APPLICATION_VENDOR_NAME "Your Company")
-SET (APPLICATION_VENDOR_URL "yourcompany.com")
+SET (APPLICATION_VENDOR_URL "mssuraj.in")
 SET (APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")
 
 
@@ -43,13 +43,14 @@ INCLUDE_DIRECTORIES("${MAINFOLDER}/include")
 #
 # Locate Project Prerequisites 
 #
+FIND_PACKAGE(PkgConfig)
 SET (Boost_ADDITIONAL_VERSIONS "1.39" "1.39.0" "1.40" "1.40.0" "1.41" "1.41.0" "1.42" "1.42.0" "1.43" "1.43.0" "1.44" "1.44.0" "1.45" "1.45.0" "1.46" "1.46.0" "1.47" "1.47.0" "1.48" "1.48.0" "1.49" "1.49.0" "1.50" "1.50.0")
 FIND_PACKAGE (Boost 1.37 COMPONENTS "date_time" "filesystem" "graph" "iostreams" "program_options" "regex" "serialization" "signals" "system" "thread" "wserialization" REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 FIND_PACKAGE (Qt4 REQUIRED)
 INCLUDE(UseQt4)
-FIND_PACKAGE (Log4Cxx REQUIRED)
+PKG_CHECK_MODULES(Log4Cxx REQUIRED liblog4cxx)
 INCLUDE_DIRECTORIES(${Log4Cxx_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Log4Cxx_LIBRARY_DIRS})
 FIND_PACKAGE (UnitTestPlusPlus REQUIRED)
