Added fresnel dielectric and mirror material

--- a/Tesla/Tesla.vcxproj
+++ b/Tesla/Tesla.vcxproj
@@ -89,31 +89,35 @@
     <ClCompile Include="..\src\cosinesampler.cpp" />
     <ClCompile Include="..\src\film.cpp" />
     <ClCompile Include="..\src\intersection.cpp" />
-    <ClCompile Include="..\src\light.cpp" />
     <ClCompile Include="..\src\material.cpp" />
     <ClCompile Include="..\src\mattematerial.cpp" />
+    <ClCompile Include="..\src\mirrormaterial.cpp" />
     <ClCompile Include="..\src\perspectivecamera.cpp" />
     <ClCompile Include="..\src\quad.cpp" />
     <ClCompile Include="..\src\quadlight.cpp" />
+    <ClCompile Include="..\src\quadlightsource.cpp" />
     <ClCompile Include="..\src\simpleaggregrate.cpp" />
     <ClCompile Include="..\src\bbox.cpp" />
     <ClCompile Include="..\src\lambertian.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\object.cpp" />
     <ClCompile Include="..\src\pathtracer.cpp" />
-    <ClCompile Include="..\src\pointlight.cpp" />
+    <ClCompile Include="..\src\pointlightsource.cpp" />
     <ClCompile Include="..\src\ptintegrator.cpp" />
     <ClCompile Include="..\src\scene.cpp" />
+    <ClCompile Include="..\src\fresneldielectric.cpp" />
     <ClCompile Include="..\src\sphere.cpp" />
     <ClCompile Include="..\src\stratifiedimagesampler.cpp" />
     <ClCompile Include="..\src\triangle.cpp" />
     <ClCompile Include="..\src\trianglemesh.cpp" />
+    <ClCompile Include="..\src\trianglemeshlight.cpp" />
     <ClCompile Include="..\src\uniformimagesampler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Tesla\bsdfs\bsdf.h" />
     <ClInclude Include="..\include\Tesla\bsdfs\bsdftype.h" />
     <ClInclude Include="..\include\Tesla\bsdfs\lambertian.h" />
+    <ClInclude Include="..\include\Tesla\bsdfs\fresneldielectric.h" />
     <ClInclude Include="..\include\Tesla\cameras\camera.h" />
     <ClInclude Include="..\include\Tesla\cameras\perspectivecamera.h" />
     <ClInclude Include="..\include\Tesla\core\core.h" />
@@ -128,13 +132,15 @@
     <ClInclude Include="..\include\Tesla\integrators\path.h" />
     <ClInclude Include="..\include\Tesla\integrators\ptintegrator.h" />
     <ClInclude Include="..\include\Tesla\integrators\surfaceintegrator.h" />
-    <ClInclude Include="..\include\Tesla\lights\arealight.h" />
-    <ClInclude Include="..\include\Tesla\lights\light.h" />
+    <ClInclude Include="..\include\Tesla\lights\lightsource.h" />
     <ClInclude Include="..\include\Tesla\lights\lights.h" />
-    <ClInclude Include="..\include\Tesla\lights\pointlight.h" />
+    <ClInclude Include="..\include\Tesla\lights\pointlightsource.h" />
     <ClInclude Include="..\include\Tesla\lights\quadlight.h" />
+    <ClInclude Include="..\include\Tesla\lights\quadlightsource.h" />
+    <ClInclude Include="..\include\Tesla\lights\trianglemeshlight.h" />
     <ClInclude Include="..\include\Tesla\materials\material.h" />
     <ClInclude Include="..\include\Tesla\materials\mattematerial.h" />
+    <ClInclude Include="..\include\Tesla\materials\mirrormaterial.h" />
     <ClInclude Include="..\include\Tesla\objects\aggregrate.h" />
     <ClInclude Include="..\include\Tesla\objects\bbox.h" />
     <ClInclude Include="..\include\Tesla\objects\quad.h" />
