--- a/Tesla/Tesla.vcxproj
+++ b/Tesla/Tesla.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="..\include\Tesla\materials\mirrormaterial.h" />
     <ClInclude Include="..\include\Tesla\objects\aggregrate.h" />
     <ClInclude Include="..\include\Tesla\objects\bbox.h" />
+    <ClInclude Include="..\include\Tesla\objects\objectmanager.h" />
     <ClInclude Include="..\include\Tesla\objects\quad.h" />
     <ClInclude Include="..\include\Tesla\objects\trianglemesh.h" />
     <ClInclude Include="..\include\Tesla\objects\object.h" />
